feat: adding request body fields validation
